methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:25: error: '<-' expected but ')' found.
  for(i<1 to 3) {
              ^MethodsPicture:38: error: illegal start of simple expression
  }}
   ^